--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -53,7 +53,6 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: ${{steps.sign_apk.outputs.signedReleaseFile}}
-          path: ${{steps.sign_apk.outputs.signedReleaseFile}}
+          path: ./
 
 
